# smart-calendar-assistant

./: .gitignore  README.md  estructura  plaintext
calendar_smart/: agenda.db  borrar_eventos.py  comprobar.py  estructura  main.py  requirements.txt  routes.py
calendar_smart/tools/: agent copy.py  agent.py  database.py  scheduler.py
db/: agenda.db
frontend/: estructura  package-lock.json  package.json
frontend/smart-calendar-app/: index.html  package-lock.json  package.json
node/: agenda.js  chat.js  database.js  package-lock.json  package.json  server.js
node/controllers/: agregarController.js  borrarController.js  consultarController.js  conversacionController.js  editarController.js
node/helpers/: dateHelpers.js  fuzzyHelpers.js
node/middleware/: router.js
node/services/: agenda.js
smart-calendar/: Diagrama de Conexiones de Módulos  esquema  estructura  main.py  requirements.txt
smart-calendar (Copiar)/:   README.md  agenda.db  langgraph.json  main.py  pyproject.toml  setup.py
smart-calendar (Copiar)/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
smart-calendar (Copiar)/api/: routes_rag.py
smart-calendar (Copiar)/src/core/: config.py  database.py
smart-calendar (Copiar)/src/models/: agent_state.py
smart-calendar (Copiar)/src/repositories/: evento_repository.py
smart-calendar (Copiar)/src/services/: agent_service.py  evento_service.py
smart-calendar (Copiar)/src/smart_calendar/: configuration.py  graph.py  prompts.py  state.py  tools.py  utils.py
(+26 files in other folders)
